Fix blog layout and hamburger menu on mobile

--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -1,9 +1,8 @@
 @import '../styles/pallette';
 
-header {
+header .navbar {
   background: $color2;
   font-size:2em;
-
   font-color: black;
 }
 
